# agentslab

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
docs/: 01-basic-usage.md  01-making-calls.py  01-setting-up-your-environment.md  01.introducing-the-use-case.md  03-using-tools.py
src/app/: main.py
src/app/agent/: agent.py  llm.py  schemas.py  templates.py
src/app/agent/prompts/: system.jinja2
src/app/agent/tools/: __init__.py  config.py  customer.py  hours.py  menu.py  order.py
src/app/guardrails/: __init__.py  input.py  output.py
src/backend/: database.py  initial_data_loader.py  main.py  models.py  schemas.py
src/backend/db/: database.py  initial_data_loader.py  models.py
src/backend/routers/: customers.py  menu.py  menu_items.py  opening_hours.py  orders.py  schemas.py
tests/: conftest.py  test_db_data_loader.py  test_db_models.py  test_routers_customers.py  test_schemas_customers.py  test_schemas_menu_items.py  test_schemas_orders.py
