[tool.poetry]
name = "agentslab"
version = "0.1.0"
description = ""
authors = ["chas <chassweeting@microsoft.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.30"
pydantic = {extras = ["email"], version = "^2.7.3"}


[tool.poetry.group.dev.dependencies]
ipython = "^8.25.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
